--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,255 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  height: 100vh;
+  position: relative;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #3960ad;
+  min-height: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  position: fixed;
+  top: 0;
+  width: 100%
 }
 
-.App-link {
-  color: #61dafb;
+.App-button {
+  display: inline-block;
+  padding: 17px;
+  margin-left: 60px;
+  margin-top: 100px;
+  margin-bottom: 20px;
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 300;
+  color: #FFFFFF;
+  background-color: #4eb5f1;
+  text-align: center;
+  transition: all 0.2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-button:hover {
+  background-color: #4095c6;
+  cursor: pointer;
+}
+
+.Empty-list {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.Empty-list_str {
+  width: 100%;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.Empty-list_img {
+  width: 100%;
+  text-align: center;
+}
+
+.Full-list {
+  position: relative;
+  max-height: 500px;
+  min-height: 500px;
+  overflow: scroll;
+  padding-left: 80px;
+  padding-bottom: 30px;
+}
+
+.Full-list_img {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
+.Full-list_img2 {
+  position: relative;
+  width: 70vh;
+}
+
+.paper {
+  margin-left: 60px;
+  background-color: #fff;
+  position: relative;
+  width: 60%;
+  height: 70vh;
+  border: 1px solid gray;
+}
+
+.paper,
+.paper::before,
+.paper::after {
+  box-shadow: 2px 1px 1px rgba(0,0,0,0.15);
+}
+
+.paper::before,
+.paper::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+}
+
+.paper::before {
+  left: 7px;
+  top: 5px;
+  z-index: -1;
+}
+
+.paper::after {
+  left: 12px;
+  top: 10px;
+  z-index: -2;
+}
+
+
+p.speech {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  width: 350px;
+	height: 100px;
+  text-align: center;
+  vertical-align: middle;
+	line-height: 20px;
+	background-color: #fff;
+	border: 8px solid #4eb5f1;
+	border-radius: 30px;
+	box-shadow: 2px 2px 4px #4eb5f1;
+}
+
+p.speech::before { 
+	content: ' '; 
+	position: absolute; 
+	width: 0; 
+	height: 0; 
+	left: 30px; 
+	top: 120px; 
+	border: 25px solid; 
+	border-color: #4eb5f1 transparent transparent #4eb5f1; 
+}
+
+p.speech::after { 
+	content: ' '; 
+	position: absolute; 
+	width: 0; 
+	height: 0; 
+	left: 38px; 
+	top: 120px; 
+	border: 15px solid; 
+	border-color: #fff transparent transparent #fff; 
+}
+
+
+.ios-toggle-text {
+  display: inline-block;
+  position: absolute;
+  top: 115px;
+  left: 400px;
+}
+.ios-toggle {
+  box-sizing: border-box;
+  display: inline-block;
+  position: absolute;
+  top: 100px;
+  left: 300px;
+  font-size: 15px;
+  width: 5.3em;
+}
+.ios-toggle input,
+.ios-toggle input:active {
+  border: 0;
+  height: 0;
+  opacity: 0;
+  outline: none;
+  position: absolute;
+  left: -5000px;
+  width: 0;
+}
+.ios-toggle label {
+  background: #f8f8f8;
+  border: 0.2em solid #ddd;
+  border-radius: 1.6em;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: block;
+  height: 3.2em;
+  padding: 1em;
+  position: relative;
+  transition: 0.3s ease-out;
+  width: 100%;
+}
+.ios-toggle label::before {
+  background: #ffffff;
+  border-radius: 1.4em;
+  box-shadow: 0 0.3em 0.3em rgba(0, 0, 0, 0.2), 0 0 0 0.1em #ddd;
+  content: "";
+  display: block;
+  height: 2.8em;
+  left: 0;
+  position: absolute;
+  right: auto;
+  text-indent: 4em;
+  top: 0;
+  transition: 0.25s ease-in-out;
+  width: 2.8em;
+  z-index: 2;
+}
+.ios-toggle label::after {
+  background: #f8f8f8;
+  border-radius: 1.4em;
+  content: "";
+  display: block;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  transition: 0.25s ease-in-out;
+  width: 2.8em;
+  z-index: 1;
+}
+.ios-toggle input:active + label::before {
+  width: 3.2em;
+}
+.ios-toggle input:checked + label {
+  border-color: #4eb5f1;
+  box-shadow: inset 0 0 0 2em #4eb5f1;
+}
+.ios-toggle input:checked + label::after {
+  background-color: #4eb5f1;
+  right: 1.4em;
+  width: 100%;
+}
+.ios-toggle input:checked + label::before {
+  box-shadow: 0 0 0 0.1em transparent, 0 0.3em 0.3em rgba(0, 0, 0, 0.3);
+  left: calc(100% - 2.8em);
+}
+.ios-toggle input:checked:active + label::before {
+  left: calc(100% - 3.2em);
+}
+
+.App-input {
+  display: inline-block;
+  position: absolute;
+  top: 115px;
+  left: 700px;
+}
+
+.App-input-icon {
+  display: inline-block;
+  position: absolute;
+  top: 115px;
+  left: 870px;
 }
